# Learn-QT5

./: CMakeLists.txt  README.md
include/ch1/: microscope.h  singleton.h
include/ch2/: my_widget.h  test_widget.h
include/ch3/: test_qwdialog.h  user_qwdialog.h
include/ch4/: decorator.h
src/ch1/: main.cc  microscope.cc  singleton.cc
src/ch2/: main.cc  my_widget.cc  test_widget.cc
src/ch3/: main.cc  test_qwdialog.cc  user_qwdialog.cc
src/ch4/: decorator.cc  main.cc
